--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
@@ -43,6 +45,7 @@
   },
   "devDependencies": {
     "eslint": "^7.28.0",
-    "eslint-plugin-react": "^7.24.0"
+    "eslint-plugin-react": "^7.24.0",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
