--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.11.1",
     "react-icons": "^4.2.0",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
