--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-hook-form": "^7.11.1",
     "react-icons": "^4.2.0",
     "react-modal": "^3.14.3",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
