Eslint now checking for unused PropTypes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,7 @@
                     "caseInsensitive": true
                 }
             }
-        ]
+        ],
+        "react/no-unused-prop-types": 1
     }
 }
